Update new  1.html

--- a/new  1.html
+++ b/new  1.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <div id="mapid" style="width: 600px; height: 400px; position: relative;"></div>
+<<script>
+var mymap = L.map('mapid').setView([0, 0]).setZoom(1);
+</script>>
 <h1>Geo77</h1>
 <h3>Übung7</h3>
 <h4>Autoren:</h4>
